# GestiuneMasini

Seminar2_GestiuneMelodii_AlocareDinamica/: CMakeLists.txt
Seminar2_GestiuneMelodii_AlocareDinamica/Seminar2_GestiuneMelodii_AlocareDinamica/: Masina.c  Masina.h  MyList.c  MyList.h  my_utils.c  my_utils.h  service.c  service.h  ui.c
